--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -33,7 +33,7 @@ nav{
     }
     .logo{
         max-width: 85px;
-        cursor: default;
+        cursor: pointer;
     }
     .navbar-brand{
         font-size: $sizetitle;
@@ -44,7 +44,7 @@ nav{
         padding-bottom: 0rem;
         line-height: normal;
         letter-spacing: 2px;
-        cursor: default;
+        cursor: pointer;
     }
     .navbar-collapse{
         justify-content: flex-end;
@@ -56,7 +56,7 @@ nav{
             text-decoration: none;
             letter-spacing: 1px;
             .nav-link{
-                color: #f2f2f2e8;
+                color: #fff;
                 padding-right: 1rem;
                 padding-left: 1rem;
                 transition: color .2s ease ;
@@ -132,10 +132,12 @@ nav{
     margin-bottom: 20vh;
     background-color: #22041d69;
     .containerinicio__video{
+        display: flex;
+        justify-content: center;
         width: 50%;
         margin: 3vh;
         .containerinicio__video-w{
-            width: 100%;
+            width: 90%;
         }
     }
     .containerinicio__text{
@@ -684,7 +686,7 @@ footer{
     .bannerinicio__container{
         align-items: center;
         .bannerinicio__title{
-            font-size: 6em;
+            font-size: 20vw;
             margin: 0;
         }
     }
@@ -692,7 +694,7 @@ footer{
     .bannermiembros__container{
         align-items: center;
         .bannermiembros__title{
-            font-size: 4em;
+            font-size: 18vw;
             margin: 0;
         }
     }
@@ -700,7 +702,7 @@ footer{
     .bannerhistoria__container{
         align-items: center;
         .bannerhistoria__title{
-            font-size: 5em;
+            font-size: 20vw;
             margin: 0;
         }
     }
@@ -708,15 +710,15 @@ footer{
     .bannerunirse__container{
         align-items: center;
         .bannerunirse__title{
-            font-size: 5em;
+            font-size: 20vw;
             margin: 0;
         }
     }
 
     .bannergaleria__container{
-
+        align-items: center;
         .bannergaleria__title{
-            font-size: 5em;
+            font-size: 20vw;
             margin: 0;
         }
     }
@@ -724,7 +726,7 @@ footer{
     .bannerunirse__container{
         align-items: center;
         .bannerunirse__title{
-            font-size: 5em;
+            font-size: 20vw;
             margin: 0;
         }
     }
@@ -735,7 +737,7 @@ footer{
             width: 100%;
         }
         .containerinicio__video {
-            width: 90%;
+            width: 100%;
         }
     }
 
@@ -776,6 +778,15 @@ footer{
         }
     }
 
+    /* GALERIA */
+    .backgroundGaleria{
+        .containergaleria{
+            .containergaleria__list {
+                margin: 10px;
+            }
+        }
+    }
+
     /* UNIRSE*/
     .backgroundunirse{
         .form__container{
@@ -793,12 +804,19 @@ footer{
                         width: 100%
                     }
                 }
-                .form__category{
-                    width: 100%;
-                    flex-direction: column;
-                }
                 .form__block {
                     flex-direction: column;
+                    .form__gender-details{
+                        .form__category{
+                            width: 100%;
+                            flex-direction: column;
+                            .form__gender-label{
+                                .form__gender{
+                                    padding-right: 0px;
+                                }
+                            }
+                        }
+                    }
                     .form__options{
                         margin-left: 0px;
                     }
@@ -808,6 +826,7 @@ footer{
     }
 
     /* FOOTER */
+
     footer{
         .footercontent{
             .footercontent__socials{
