--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -598,32 +598,27 @@ nav{
                 justify-content: center;
                 height: 45px;
                 margin: 45px 0;
-                a{
-                    width: 70%;
-                    display: flex;
+                .form__button-input{
+                    height: 100%;
+                    width: 60%;
                     justify-content: center;
+                    display: flex;
+                    align-items: center;
                     text-decoration: none;
-                    .form__button-input{
-                        height: 100%;
-                        width: 70%;
-                        outline: none;
-                        background: #fff3;
-                        border: 1px solid $colortext;
-                        color: $unirsecolor;
-                        border: none;
-                        border: 1px solid #ffffffb5;
-                        border-radius: 40px;
-                        font-weight: 1em;
-                        letter-spacing: 1px;
-                        text-transform: uppercase;
-                        font-weight: 600;
-                        transition: all 0.3s ease;
-                        &:hover{
-                            color: #fff;
-                            background: $unirsecolor;
-                        }
+                    outline: none;
+                    background: #fff3;
+                    border: 1px solid $colortext;
+                    color: $unirsecolor;
+                    border-radius: 40px;
+                    font-weight: 1em;
+                    letter-spacing: 1px;
+                    text-transform: uppercase;
+                    font-weight: 600;
+                    transition: all 0.3s ease;
+                    &:hover{
+                        color: #fff;
+                        background: $unirsecolor;
                     }
-
                 }
             }
         }
