--- a/css/estilos.css
+++ b/css/estilos.css
@@ -867,26 +867,23 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
   margin: 45px 0;
 }
 
-.backgroundunirse .form__container form .form__button a {
-  width: 70%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.backgroundunirse .form__container form .form__button .form__button-input {
+  height: 100%;
+  width: 60%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
-}
-
-.backgroundunirse .form__container form .form__button a .form__button-input {
-  height: 100%;
-  width: 70%;
   outline: none;
   background: #fff3;
   border: 1px solid #e7e8e9;
   color: #f93e3c;
-  border: none;
-  border: 1px solid #ffffffb5;
   border-radius: 40px;
   font-weight: 1em;
   letter-spacing: 1px;
@@ -896,7 +893,7 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
   transition: all 0.3s ease;
 }
 
-.backgroundunirse .form__container form .form__button a .form__button-input:hover {
+.backgroundunirse .form__container form .form__button .form__button-input:hover {
   color: #fff;
   background: #f93e3c;
 }
